--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,17 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+    - name: Deploy
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        EC2_USER: ${{ secrets.EC2_USER }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+      run: 
+        echo "$SECRET_KEY" > secret_key
+        chmod 600 secret_key
+        ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key \
+        && cd ~/django_app \
+        && git pull origin master \
+        && python manage.py migrate \
+        && python manage.py runserver
+      
