--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,9 +33,9 @@ jobs:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         EC2_USER: ${{ secrets.EC2_USER }}
         EC2_HOST: ${{ secrets.EC2_HOST }}
-      run: 
-        echo "$SECRET_KEY" > secret_key
-        chmod 600 secret_key
+      run: | 
+        echo "$SECRET_KEY" > secret_key \
+        chmod 600 secret_key \
         ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key \
         && cd ~/django_app \
         && git pull origin master \
