--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,5 +36,6 @@ jobs:
       run: | 
         echo "$SECRET_KEY" > secret_key 
         chmod 600 secret_key 
+        chmod 600 deploy.sh
         ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "./deploy.sh"
       
