--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,10 +50,31 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }}  
       run: |
-        echo ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG=latest
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    # rendering ECS task definition
+    - name: Render Amazon ECS task definition
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }} 
+        IMAGE_TAG: latest
+      id: render-container
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        # Path where task-definition file is exist
+        task-definition: aws/task-definition.json 
+        container-name: app-container-name
+        image:  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    # Deploy ECS Service
+    - name: Deploy to Amazon ECS service
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.render-container.outputs.task-definition }}
+        service: app-service
+        cluster: app-ecs-cluster
 
         
       
