--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -32,19 +32,17 @@ jobs:
       run: |
         python3 manage.py test
 
-    - name: Configure AWS Credentials # AWSアクセス権限設定
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-1
 
-    # ECRログイン処理
     - name: Login to Amazon ECR 
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    # ECRイメージPush
     - name: Build, tag, and push image to Amazon ECR 
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -54,7 +52,6 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-    # rendering ECS task definition
     - name: Render Amazon ECS task definition
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -65,16 +62,15 @@ jobs:
       with:
         # Path where task-definition file is exist
         task-definition: aws/task-definition.json 
-        container-name: app-container-name
+        container-name: django-app
         image:  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-    # Deploy ECS Service
     - name: Deploy to Amazon ECS service
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.render-container.outputs.task-definition }}
-        service: app-service
-        cluster: app-ecs-cluster
+        service: django-service
+        cluster: django-cluster
 
         
       
