--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,6 +44,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR 
+      id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }}  
@@ -52,26 +53,21 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-    - name: Render Amazon ECS task definition
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }} 
-      id: render-container
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        # Path where task-definition file is exist
-        task-definition: aws/task-definition.json 
+        task-definition: ./aws/task-definition.json 
         container-name: django-app
-        image: ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest
+        image: ${{ steps.build-image.outputs.image }}
 
-    - name: Deploy to Amazon ECS service
-      env:
-        TASK_DEFINITION: ${{ steps.render-container.outputs.task-definition }}
+    - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${TASK_DEFINITION}
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: django-service
         cluster: django-cluster
+        wait-for-service-stability: true
 
         
       
